$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-27 (opened Februray 22, 2013)

	* specaccum: gained argument 'w' for weights to give the sampling
	effort. This resurrects a feature that was introduced in r1505 (22
	Feb 2011) and 1507, and removed in r1606 (26 May 2011). It seems
	that BiodiversityR::balanced.specaccum() provides the same feature
	but we still try it here.  The feature was resurrected after a
	user query by Bastien Mérigot (Univ Montpellier II). The working
	of the new argument is still untested with specaccum() support
	functions.

	* text.cca, points.cca: gained argument 'axis.bp' (defaults TRUE)
	to suppress drawing axes for scaled biplot arrows. Only effective
	if 'bp' scores were requested.
	
Version 2.1-26 (opened February 11, 2013)

	* New version opened with the release of vegan_2.0-6 on February
	11, 2013.

	* metaMDS: exposed argument 'maxit' in metaMDSiter() so that users
	can set the number of iterations in monoMDS() or isoMDS().
	metaMDS(..., trace = 2) show the stopping criterion used in with
	engine = "monoMDS". After wishes by Jon Bakker, Univ Washington
	(U.S.A.).

	* tabasco: a sister function of vegemite() to display a compact
	community table using heatmap(). Both vegemite() and tabasco() can
	handle cluster::agnes() trees.

	* wcmdscale: return a full "wcmdscale" object if any argument is
	set to non-default value. This also implies that if weights 'w'
	are set, the result will be full "wcmdscale" object with a
	"weights" item, instead of a simple matrix with no information
	about weights used.
	
Version 2.1-25 (closed February 11, 2013)

	* FAQ: new entry on impossibility of using random effects in cca,
	rda, capscale & adonis, and telling how to do this
	approximately. Please comment and correct.

	* oecosimu: changed the structure of the oecosimu() result
	object. It now returns a list of two items: "statistic" is the
	observed statistic, and "oecosimu" which contains the simulation